kyverno-policies/custom-5.1.3.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: custom-5-1-3-limit-ecr-access-read-only
  annotations:
    policies.kyverno.io/category: CIS 5.1.3
    policies.kyverno.io/description: |
      Checks for ECR access annotation or label set to read-only in ServiceAccount or Namespace if available.
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-limit-ecr-access-read-only
      match:
        any:
        - resources:
            kinds:
              - ServiceAccount
              - Namespace
      validate:
        message: "Cluster ECR access should be limited to read-only (look for ecr-access: read-only annotation or label)."
        anyPattern:
          - metadata:
              annotations:
                ecr-access: "read-only"
          - metadata:
              labels:
                ecr-access: "read-only"
